--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.1.4",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.1",
-    "webpack-dev-server": "^2.11.1"
+    "redux-mock-store": "^1.5.1"
   }
 }
