--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm install",
     "postinstall": "webpack",
-    "webpack": "webpack --watch",
+    "dev": "webpack-dev-server --hot --open",
     "test": "jest",
     "test:watch": "npm test --watch"
   },
@@ -36,6 +36,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.1.4",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.1"
+    "redux-mock-store": "^1.5.1",
+    "webpack-dev-server": "^2.11.1"
   }
 }
